# TorchGuard

./: .gitignore  Cargo.toml  README.md  sample_code.py
.history/src/: main_20250514222211.rs  main_20250514222228.rs  main_20250514222349.rs  main_20250514222443.rs  main_20250514222524.rs  main_20250515135123.rs  main_20250515135437.rs  main_20250515135745.rs  main_20250515140043.rs  main_20250515140129.rs  main_20250515140140.rs  main_20250515140152.rs  main_20250515140227.rs  main_20250515140257.rs  main_20250515140820.rs  main_20250515141008.rs  main_20250515141044.rs  main_20250515141153.rs  main_20250515141157.rs  main_20250515141415.rs  main_20250515141931.rs  main_20250515142013.rs  main_20250515142131.rs  main_20250515142224.rs  main_20250515142233.rs  main_20250515143121.rs  main_20250515143209.rs  main_20250515145331.rs
ml-code-assistant/: next.config.ts  package-lock.json  package.json
ml-code-assistant/src/app/: page.tsx
ml-code-assistant/src/components/: AnalysisResults.tsx  CodeEditor.tsx
src/: main.rs
src/analyzer/: mod.rs  tests.rs
src/api/: mod.rs
src/search/: mod.rs  tests.rs
tests/: api_tests.rs
