[package]
name = "rust-llm-qdrant"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
rust-embed = "8.0"
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tokio-util = "0.7"
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
